--- a/style.css
+++ b/style.css
@@ -5,7 +5,18 @@
     color: #FF004D;
 }
 
-
+.btn-theme{
+    background-color: #FF004D;
+    padding: 5px 20px;
+    color: #ffffff;
+}
+.btn-theme:hover{
+    color: #ffffff;
+    box-shadow: 0px 0px 0px 4px rgba(255, 0, 70, 0.5),0px 0px 0px 7px rgba(255, 0, 70, 0.3);
+}
+html body{
+    font-family: 'Poppins', sans-serif;
+}
 
 #main-home .header-top .item a{
     color: #000000;
@@ -27,6 +38,44 @@
     padding: 5px 10px;
     border-radius: 5px;
 }
+#main-home #banner-slider .owl-carousel .owl-nav button{
+    position: absolute;
+    top: 30%;
+    outline: none;
+}
+#main-home #banner-slider .owl-carousel .owl-nav button.owl-prev{
+    left: 0;
+}
+#main-home #banner-slider .owl-carousel .owl-nav button.owl-next{
+    right: 0;
+}
+#main-home #banner-slider .owl-carousel .owl-nav button span{
+    font-size: 56px;
+    padding: 0 1rem;
+    color: #FF004D;
+}
+
+#main-home #banner-slider .owl-carousel .owl-nav button.owl-prev span{
+    margin-left: -5rem;
+}
+#main-home #banner-slider .owl-carousel .owl-nav button.owl-next span{
+    margin-right: -5rem;
+}
+#main-home #banner-slider .owl-carousel .owl-dots{
+    position: absolute;
+    bottom: -6rem;
+    left: 50%;
+    transform: translateX(-50%);
+}
+#main-home #banner-slider .owl-carousel .owl-dots button span{
+    background-color: #c8c8c8;
+    padding: 6px !important;
+}
+#main-home #banner-slider .owl-carousel .owl-dots button.active span{
+    background-color: #FF004D;
+}
+
+
 
 @media only screen and (max-width:580px){
     #main-home .header-top{
