--- a/style.css
+++ b/style.css
@@ -18,6 +18,13 @@ html body{
     font-family: 'Poppins', sans-serif;
 }
 
+#main-home{
+    width: 100%;
+    min-height: 650px;
+    background: url(img/bg-home.jpg);
+    background-size: 100%, 100%;
+}
+
 #main-home .header-top .item a{
     color: #000000;
 }
@@ -80,5 +87,18 @@ html body{
 @media only screen and (max-width:580px){
     #main-home .header-top{
         flex-direction: column;
+    }
+    #main-home{
+        padding: 20px 0;
+    }
+    #main-home #banner-slider{
+        width: 95%;
+        margin: auto;
+    }
+    #main-home #banner-slider .owl-carousel .owl-nav button{
+        display: none;
+    }
+    #main-home #banner-slider .owl-carousel .owl-dots{
+        bottom: -2rem;
     }
 }
